refactor, add advanced sermons capability, need to complete post sermon

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,10 @@
-Brotli==1.1.0
-cachetools==5.5.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 certifi==2024.8.30
 charset-normalizer==3.3.2
 configparser==7.1.0
-google-api-core==2.20.0
-google-api-python-client==2.147.0
-google-auth==2.35.0
-google-auth-httplib2==0.2.0
-googleapis-common-protos==1.65.0
-httplib2==0.22.0
 idna==3.10
-mutagen==1.47.0
-proto-plus==1.24.0
-protobuf==5.28.2
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycryptodomex==3.20.0
-pyparsing==3.1.4
 requests==2.32.3
-rsa==4.9
-uritemplate==4.1.1
+-e git+ssh://git@github.com/westcenterbaptist/podbean-client.git@691984c0b3751bcfef8f8751ce1b16d5ac4dbdae#egg=sermon_publisher
+soupsieve==2.6
 urllib3==2.2.3
-websockets==13.1
-yt-dlp==2024.9.27
