--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,29 @@
 beautifulsoup4==4.12.3
+Brotli==1.1.0
 bs4==0.0.2
+cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 configparser==7.1.0
+google-api-core==2.21.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.65.0
+httplib2==0.22.0
 idna==3.10
+mutagen==1.47.0
+proto-plus==1.24.0
+protobuf==5.28.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycryptodomex==3.21.0
+pyparsing==3.1.4
 requests==2.32.3
+rsa==4.9
 -e git+ssh://git@github.com/westcenterbaptist/podbean-client.git@691984c0b3751bcfef8f8751ce1b16d5ac4dbdae#egg=sermon_publisher
 soupsieve==2.6
+uritemplate==4.1.1
 urllib3==2.2.3
+websockets==13.1
+yt-dlp==2024.10.7
