restructure, not working

--- a/config/default.ini
+++ b/config/default.ini
@@ -1,7 +1,7 @@
 [PODBEAN_PLUGIN]
 podbean_api_key = apikey
 podbean_api_secret = secret
-base_url = https://api.podbean.com/v1/
+podbean_api_url = https://api.podbean.com/v1/
 unpublished_audio_path = /home/user/audio/unpublished
 published_audio_path = /home/user/audio/published
 podbean_image_path = /home/user/podbean/logo.png
